--- a/Pali/css/style.css
+++ b/Pali/css/style.css
@@ -10,3 +10,23 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.container-fluid {
+    height: 100vw;
+    padding: 500px 0;
+}
+
+#result {
+    font-size: 5em;
+    text-align: center;
+    margin-top: 100px;
+    text-transform: uppercase;
+}
+
+#result.right {
+    color: blue;
+}
+
+#result.wrong {
+    color: red;
+}
