--- a/Dispari/css/style.css
+++ b/Dispari/css/style.css
@@ -10,3 +10,26 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+select {
+    height: 45px;
+}
+
+.container-fluid {
+    height: 100vh;
+}
+
+#result {
+    font-size: 5em;
+    text-align: center;
+    margin-top: 100px;
+    text-transform: uppercase;
+}
+
+#result.right {
+    color: blue;
+}
+
+#result.wrong {
+    color: red;
+}
